[project]
name = "groundstation"
version = "0.1.0"
description = ""
authors = [
    {name = "Nikita Nasiedkin",email = "nkitanas@proton.me"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pyserial (>=3.5,<4.0)",
    "spidev (>=3.8,<4.0)",
    "lorarf (>=1.4.0,<2.0.0)",
    "gpiod (>=2.4.0,<3.0.0)",
    "tkinter-qpython (>=8.6.0.5,<9.0.0.0)"
]

[tool.poetry]
packages = [{include = "groundstation", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
